# marine-eov-broker

./: .gitignore  EnvriHub Marine EOV Broker SPARQL.ipynb  EnvriHub Marine EOV Broker.ipynb  Pykg2tbl dcat query.ipynb  README.md  environment.yml  new-feat.md  pyproject.toml  setup.cfg  workshop.ipynb
lib/: ErddapMarineRI.py  MarineRiBroker.py
lib/.ipynb_checkpoints/: ErddapMarineRI-checkpoint.py
src/marine_eov_broker/: ErddapMarineRI.py  MarineRiBroker.py  NVSQueries.py
src/marine_eov_broker/j2_templates/: EV.sparql  eov_query.sparql  nsv-eov-to-usage_via-iop.sparql  platform_finder.sparql
src/tests/: test_MarineRiBroker.py
