[metadata]
name = marine-eov-broker
version = 1.0.0
author = Antoine QUERIC
author_email = antoine.queric@ifremer.fr
description = Broker for Marine Essential Ocean Variables will help you gather data from multiple Marine RI data servers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/twnone/marine-eov-broker
project_urls =
    Bug Tracker = https://github.com/twnone/marine-eov-broker/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    h5netcdf
    matplotlib
    nc-time-axis
    netcdf4
    pandas
    requests
    scipy
    shapely
    xarray
    pykg2tbl
    pysubyt

[options.packages.find]
where = src